syntax = "proto3";

package yandex.cloud.datatransfer.v1.endpoint;

option go_package = "github.com/yandex-cloud/go-genproto/yandex/cloud/datatransfer/v1/endpoint;endpoint";
option java_package = "yandex.cloud.api.datatransfer.v1.endpoint";
option csharp_namespace = "Yandex.Cloud.Datatransfer.V1.EndPoint"; // there is a clash with class Endpoint in namespace Yandex.Cloud.Datatransfer.V1

import "yandex/cloud/datatransfer/v1/endpoint/common.proto";

message OnPremiseMongo {
    reserved 3 to 4;
    repeated string hosts = 1;
    int64 port = 2;
    string replica_set = 5;
    TLSMode tls_mode = 6;
}
message MongoConnectionOptions {
    oneof address {
        string mdb_cluster_id = 1;
        OnPremiseMongo on_premise = 2;
    }
    // User name
    string user = 3;
    // Password for user
    Secret password = 4;
    // Database name associated with the credentials
    string auth_source = 5;
}
message MongoConnection {
    reserved 1 to 2;
    oneof connection {
        MongoConnectionOptions connection_options = 3;
    }
}
message MongoCollection {
    string database_name = 1;
    string collection_name = 2;
}
message MongoSource {
    reserved 3 to 5, 9 to 10;
    MongoConnection connection = 1;
    string subnet_id = 2;
    // List of collections for replication. Empty list implies replication of all
    // tables on the deployment. Allowed to use * as collection name.
    repeated MongoCollection collections = 6;
    // List of forbidden collections for replication. Allowed to use * as collection
    // name for forbid all collections of concrete schema.
    repeated MongoCollection excluded_collections = 7;
    // Read mode for mongo client
    bool secondary_preferred_mode = 8;
    // Security groups
    repeated string security_groups = 11;
}
message MongoTarget {
    reserved 3 to 5;
    MongoConnection connection = 1;
    // Database name
    string database = 2;
    CleanupPolicy cleanup_policy = 6;
    string subnet_id = 7;
    // Security groups
    repeated string security_groups = 8;
}
